<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/line_layout_details2"
        >

        <ImageView
            android:layout_width="130dp"
            android:layout_height="210dp"
            android:src="@drawable/power_of_habit"
            android:id="@+id/book_imgview"/>

        <TextView
            android:id="@+id/price_textv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/ten_dp"
            android:text="@string/price"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/isbn_textv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/ten_dp"
            android:text="@string/isbn"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/date_textv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/ten_dp"
            android:text="@string/publication_date"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/pages_textv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/ten_dp"
            android:text="@string/pages"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/line_layout_details"
        android:layout_toRightOf="@id/line_layout_details2">

        <TextView
            android:id="@+id/book_name_textv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="10dp"
            android:text="Book name"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/author_name_textv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/ten_dp"
            android:text="@string/author"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/overview_textv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/ten_dp"
            android:text="@string/overview"
            android:textSize="@dimen/sixteen_sp" />

        <TextView
            android:id="@+id/overview_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/ten_dp"
            android:textSize="@dimen/sixteen_sp"
            android:scrollbars="vertical"/>
    </LinearLayout>

    <Button
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/add_to_favorites"
        android:background="@color/yellow"
        android:textColor="@android:color/white"
        android:id="@+id/addToFavBtn"
        android:layout_below="@id/line_layout_details2" />

    <Button
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:text="@string/buy_it"
        android:background="@color/green"
        android:textColor="@android:color/white"
        android:id="@+id/butItBtn"
        android:layout_below="@id/addToFavBtn"/>

</RelativeLayout>